<resources>
    <!--General Buttons-->
    <string name="back_bttn">Back</string>
    <string name="submit_bttn">Submit</string>
    <string name="click_to_change">Click to change…</string>

    <!--HomeActivity-->
    <string name="app_name">Smart Home Controller</string>
    <string name="action_settings">Settings</string>
    <string name="add_device_bttn">Add device</string>
    <string name="close_app_bttn">Exit</string>
    <string name="schedule_bttn">Schedule</string>

    <!--AddDeviceActivity-->
    <string name="title_activity_add_device">Add new device</string>
    <string name="device_name_text_view">Device name:</string>
    <string name="protocol_text_view">Protocol:</string>
    <string name="model_text_view">Model:</string>
    <string name="chooseText">Choose here …</string>

    <string-array name="protocolList">
        <item name="baseitem">arctech</item>
    </string-array>

    <string-array name="modelList">
        <item name="baseitem">selflearning-switch</item>
    </string-array>
    <string name="title_activity_schedule">ScheduleActivity</string>

    <!--ScheduleActivity-->
    <string name="schedule_title">Schedule</string>
    <string name="title_activity_add_new_event">AddNewEvent</string>
    <string name="add_new_device_bttn">Add event</string>

    <!---ScheduleNewEvent-->
    <string name="schedule_event">Schedule new event</string>
    <string name="device_list_name">Device:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="event_on_off">Device should be:</string>
    <string name="end_data_checkbox">Enter end date and time</string>

    <string-array name="status_list">
        <item name ="On">ON</item>
        <item name ="Off">OFF</item>
    </string-array>
</resources>
