<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.AddDevice"
    tools:showIn="@layout/activity_add_device"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/backgrounds">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_add_device"
        android:id="@+id/addDeviceTitleTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_name_text_view"
            android:id="@+id/deviceNameTextView" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enteredDeviceName"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/protocol_text_view"
            android:id="@+id/protocolTextView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/protocolSpinner"
            android:entries="@array/protocolList" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/model_text_view"
            android:id="@+id/modelTextView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modelSpinner"
            android:entries="@array/modelList" />
    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        style="@style/ButtonStyle"
        android:text="@string/submit_bttn"
        android:id="@+id/submitNewDeviceBttn" />

    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        style="@style/ButtonStyle"
        android:text="@string/back_bttn"
        android:id="@+id/backBttn" />

</LinearLayout>
