<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.HomeActivity"
    tools:showIn="@layout/activity_home"
    android:id="@+id/homeLayout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/backgrounds">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/appNameTextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_weight="5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/deviceListView"></LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:baselineAligned="true"
        android:id="@+id/buttonsPanel"
        android:layout_weight="0.05">

        <Button
            android:text="@string/add_device_bttn"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/addDeviceBttn"
            style="@style/ButtonStyle"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/schedule_bttn"
            android:id="@+id/scheduleBttn"
            style="@style/ButtonStyle"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/close_app_bttn"
            android:id="@+id/closeAppBttn"
            style="@style/ButtonStyle"/>

    </LinearLayout>

</LinearLayout>
